Added text on homepage

--- a/OceanSunfishWebApp/Views/Home/Index.cshtml
+++ b/OceanSunfishWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,56 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+    <div class="row">
+        <div class="d-block d-xs-block d-sm-block d-md-block d-xl-none d-lg-none col-sm-12 col-xs-12 ">
+            <h2 class="d-block d-xl-none d-lg-none">
+                Ocean Sunfish
+            </h2>
+
+
+
+            <div>
+
+                <img src="~/images/SunfishesArtboard.png" width="2448" height="3168" alt="Ocean Sunfish" typeof="foaf:Image" class="img-fluid">
+
+
+            </div>
+
+
+
+        </div>
+        <div class="col-xl-6 col-lg-6 col-sm-12 col-xs-12">
+            <h2 class="d-none d-lg-block d-xl-block">
+                What is the Ocean Sunfish?
+            </h2>
+
+            <p>The ocean sunfish or common mola (Mola mola) is one of the heaviest known bony fishes in the world. Adults typically weigh between 247 and 1,000 kg (545–2,205 lb).</p>
+
+            
+
+
+            <a class="btn btn-secondary gtm-content-button" href="https://en.wikipedia.org/wiki/Ocean_sunfish">
+
+                Learn more
+
+            </a>
+
+        </div>
+        <div class="col-xl-6 col-lg-6 d-none d-lg-block d-xl-block">
+
+
+
+            <div>
+
+
+            </div>
+
+
+
+        </div>
+    </div>
+
+@*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+</div>*@
