Tried adding image

--- a/OceanSunfishWebApp/Views/Shared/_Layout.cshtml
+++ b/OceanSunfishWebApp/Views/Shared/_Layout.cshtml
@@ -11,8 +11,10 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                @*<a Style="color:#e2e5e6;font-family: Source Sans Pros, sans-serif;font-size:13px;padding: 10px 12px;border-right: 1px solid #dddddd66;" class="navbar-brand" 
-                   href="@Url.Action("Index", "Home")">  <img style="width: 175px;" src="~/images/SunfishesArtboard.png" /></a>*@
+                @*<a Style="color:#e2e5e6;font-family: Source Sans Pros, sans-serif;font-size:13px;padding: 10px 12px;border-right: 1px solid #dddddd66;" class="navbar-brand"
+        href="@Url.Action("Index", "Home")">  <img style="width: 175px;" src="~/images/SunfishesArtboard.png" /></a>*@
+                
+                @*<img style="width: 175px;" src="@Url.Content("~/images/SunfishesArtboard.png")" />*@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ocean Sunfish</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
