Added images and links

--- a/OceanSunfishWebApp/Views/Home/Index.cshtml
+++ b/OceanSunfishWebApp/Views/Home/Index.cshtml
@@ -3,6 +3,12 @@
 }
 
     <div class="row">
+        <div>
+            <img style="width: 500px; float: right" src="@Url.Content("https://i.ibb.co/JxHsrdk/Sunfish2.jpg")" />
+            @*<img src="~/images/SunfishesArtboard.png" width="2448" height="3168" alt="Ocean Sunfish" typeof="foaf:Image" class="img-fluid">*@
+
+
+        </div>
         <div class="d-block d-xs-block d-sm-block d-md-block d-xl-none d-lg-none col-sm-12 col-xs-12 ">
             <h2 class="d-block d-xl-none d-lg-none">
                 Ocean Sunfish
@@ -10,12 +16,7 @@
 
 
 
-            <div>
 
-                <img src="~/images/SunfishesArtboard.png" width="2448" height="3168" alt="Ocean Sunfish" typeof="foaf:Image" class="img-fluid">
-
-
-            </div>
 
 
 
@@ -25,9 +26,15 @@
                 What is the Ocean Sunfish?
             </h2>
 
-            <p>The ocean sunfish or common mola (Mola mola) is one of the heaviest known bony fishes in the world. Adults typically weigh between 247 and 1,000 kg (545–2,205 lb).</p>
 
-            
+            <p>
+                The ocean sunfish or common mola (Mola mola) is one of the heaviest known bony fishes in the world. Adults typically weigh between 247 and 1,000 kg (545–2,205 lb).
+            </p>
+            <p>
+                The species is native to tropical and temperate waters around the world. It resembles a fish head with a tail, and its main body is flattened laterally. Sunfish can be as tall as they are long when their dorsal and ventral fins are extended.
+            </p>
+            <p>Females of the species can produce more eggs than any other known vertebrate, up to 300,000,000 at a time.</p>
+            <p>https://en.wikipedia.org/wiki/Ocean_sunfish</p>
 
 
             <a class="btn btn-secondary gtm-content-button" href="https://en.wikipedia.org/wiki/Ocean_sunfish">
@@ -35,6 +42,7 @@
                 Learn more
 
             </a>
+
 
         </div>
         <div class="col-xl-6 col-lg-6 d-none d-lg-block d-xl-block">
