Added team members

--- a/OceanSunfishWebApp/Views/Home/Index.cshtml
+++ b/OceanSunfishWebApp/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div style="font-size:22px;">
+    <span style="color:red">Team:</span> Abha Deshpande, Joanthan Kwak, Luana Fernandes, Naveen Lanke, Matt Favilla, Ravi Kosuri, Rupinder Kaur <br /><br />
+</div>
+
     <div class="row">
         <div>
             <img style="width: 500px; float: right" src="@Url.Content("https://i.ibb.co/JxHsrdk/Sunfish2.jpg")" />
@@ -23,7 +27,7 @@
         </div>
         <div class="col-xl-6 col-lg-6 col-sm-12 col-xs-12">
             <h2 class="d-none d-lg-block d-xl-block">
-                What is the Ocean Sunfish?
+               Ocean Sunfish
             </h2>
 
 
